[tool.poetry]
name = "test-todomvc"
version = "0.1.0"
description = "a1-06-first-refactoring-10-task-md"
authors = ["Datsenko Volodymyr (Shemar) <nastavnyk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
selene = {version = "^1.0.2", allow-prereleases = true}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
